# terminaltutor

./: README.md  leitner_state.json  pyproject.toml  terminaltutor.py
.devcontainer/: devcontainer.json
QuizSets/Testing/: testing.csv
quizsets/az900/: az900_001.csv  state.json
tests/: test_add_deck.py  test_init_and_due.py  test_schedule.py  test_study_flow.py
