[project]
name = "terminaltutor"
version = "0.1.0"
description = "TerminalTutor is a tiny, dependency-free Python CLI for mastering exams from your terminal. It implements a Leitner spaced-repetition system with confidence tagging, so you review missed items more often and space out what you know."
authors = [
    {name = "kevinflint-cs2",email = "kevin.flint@cybersecuritysquared.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
